--- a/Log_trace.html
+++ b/Log_trace.html
@@ -11329,3 +11329,723 @@ Log session start time Mon Nov 29 10:44:24 IST 2021<br>
 <td>UserPage.java:759</td>
 <td title="Message">Record With tmaker2 Is Displayed In List With Status ACTIVE</td>
 </tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Log_Trace</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Tue Nov 30 18:18:14 IST 2021<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>4</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>5</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Create Group</td>
+</tr>
+
+<tr>
+<td>6</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Log_Trace</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Tue Nov 30 18:20:58 IST 2021<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>4</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>4</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Create Group</td>
+</tr>
+
+<tr>
+<td>4</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>61891</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>61891</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>61892</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Approve the Group</td>
+</tr>
+
+<tr>
+<td>61892</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Log_Trace</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Tue Nov 30 18:22:28 IST 2021<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>3</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>4</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Create Group</td>
+</tr>
+
+<tr>
+<td>4</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>61788</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>61788</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>61788</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Approve the Group</td>
+</tr>
+
+<tr>
+<td>61788</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>110778</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>110779</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>110779</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To View the Group</td>
+</tr>
+
+<tr>
+<td>110779</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>159804</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>159804</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>159805</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To perform Modify/Repair action for Group</td>
+</tr>
+
+<tr>
+<td>159805</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>208873</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>208874</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>208874</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Approve the Group</td>
+</tr>
+
+<tr>
+<td>208874</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>257882</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>257883</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>257883</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To View the Group</td>
+</tr>
+
+<tr>
+<td>257883</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>306872</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>306872</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>306873</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Remove Group</td>
+</tr>
+
+<tr>
+<td>306873</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>354940</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>354940</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>354940</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Approve the Group</td>
+</tr>
+
+<tr>
+<td>354940</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>399453</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>399453</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>399453</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To View the Group</td>
+</tr>
+
+<tr>
+<td>399453</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>444051</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>444051</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>444052</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Block Group</td>
+</tr>
+
+<tr>
+<td>444052</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>488566</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>488567</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>488567</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Approve the Group</td>
+</tr>
+
+<tr>
+<td>488567</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>533072</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>533073</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>533073</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To View the Group</td>
+</tr>
+
+<tr>
+<td>533073</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>577583</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>577583</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>577584</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Unblock Group</td>
+</tr>
+
+<tr>
+<td>577584</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>622095</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>622096</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>622096</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To Approve the Group</td>
+</tr>
+
+<tr>
+<td>622096</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>666603</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:38</td>
+<td title="Message">****LAUNCH BROWSER****</td>
+</tr>
+
+<tr>
+<td>666603</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:39</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
+
+<tr>
+<td>666603</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:40</td>
+<td title="Message">To View the Group</td>
+</tr>
+
+<tr>
+<td>666603</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="AppHooks.Hooks category">AppHooks.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">------------------------------------------------------------</td>
+</tr>
